# tux-im

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
MagicMock/mock.dictionary.user_words_path/: 130413175670832  132003059742912
data/: pinyin.dict.yaml  wubi86.dict.yaml
debian/: changelog  control  copyright  pybuild.cfg  rules  tux-im.install  tux-im.postinst  tux-im.postrm
docs/: ARCHITECTURE.md  BUILDING.md  CONFIGURATION.md  DESIGN.md  DEVELOPMENT.md  ERROR_LOG.md
scripts/: build-deb.sh
setup/: com.github.tux-im.TuxIM.service  com.github.tux-im.TuxIM.xml  ibus-engine-tux-im  tux-im-setup.desktop
tests/: test_asr.py  test_capslock.py  test_config.py  test_emoji.py  test_engine_flow.py  test_lexicon.py  test_modifier_passthrough.py  test_pinyin.py  test_shortcut.py  test_wbpy.py  test_wubi.py
tux_im/: __init__.py  __main__.py  engine.py  main.py  shortcut.py
tux_im/asr/: __init__.py  capture.py  client.py  handler.py  overlay.py
tux_im/config/: __init__.py  config.py  monitor.py
tux_im/input/: __init__.py  base.py  emoji.py  google_pinyin.py  google_pinyin_mode.py  latin.py  lexicon.py  pinyin.py  wbpy.py  wubi.py
tux_im/input/lexicon/: __init__.py  _persistence.py  _trie.py
tux_im/ui/: __init__.py  settings.py
